# agentic_paper_summarizer

./: README.md  app.py  arxiv_paper_flow.html.html  pyproject.toml
src/arxiv_paper/: main.py
src/arxiv_paper/crews/arxiv_crew/: arxiv_paper_crew.py
src/arxiv_paper/crews/arxiv_crew/config/: agents.yaml  tasks.yaml
src/arxiv_paper/tools/: custom_tool.py
